added handlers doc
