# backend/handlers.go
@@ -5,7 +5,6 @@ import (
 	"errors"
 	"io"
 	"net/http"
-	"os"
 	"time"
 
 	"github.com/gin-gonic/gin"
@@ -13,16 +12,16 @@ import (
 	"github.com/google/uuid"
 )
 
+// @Summary Check server health
+// @Tags health
+// @Description Check if server respond
+// @Produce json
+// @Success 200 {object} HealthResponce "Server health status"
+// @Router /health [get]
 func healthHandler(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{
-		"status": "healthy",
-		"time":   time.Now(),
-	})
-}
-
-func parseToken(tokenString string) (*jwt.Token, error) {
-	return jwt.Parse(tokenString, func(token *jwt.Token) (interface{}, error) {
-		return []byte(os.Getenv("JWT_SECRET")), nil
+	c.JSON(http.StatusOK, HealthResponce{
+		Status: "healthy",
+		Time:   time.Now(),
 	})
 }
 
@@ -30,7 +29,7 @@ func authMiddleware() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		tokenString, err := c.Cookie("access_token")
 		if err != nil || tokenString == "" {
-			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "JWT not provided"})
+			c.AbortWithStatusJSON(http.StatusUnauthorized, ErrorResponce{Error: "JWT not provided"})
 			return
 		}
 
@@ -38,19 +37,19 @@ func authMiddleware() gin.HandlerFunc {
 		if err != nil || token == nil {
 			if ve, ok := err.(*jwt.ValidationError); ok {
 				if ve.Errors&jwt.ValidationErrorExpired != 0 {
-					c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Token has expired"})
+					c.AbortWithStatusJSON(http.StatusUnauthorized, ErrorResponce{Error: "Token has expired"})
 					return
 				}
 			}
 
-			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Wrong jwt"})
+			c.AbortWithStatusJSON(http.StatusUnauthorized, ErrorResponce{Error: "Wrong jwt"})
 			return
 		}
 
 		if claims, ok := token.Claims.(jwt.MapClaims); ok && token.Valid {
 			userId, exists := claims["user_id"]
 			if !exists {
-				c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Invalid token claims"})
+				c.AbortWithStatusJSON(http.StatusUnauthorized, ErrorResponce{Error: "Invalid token claims"})
 				return
 			}
 
@@ -58,7 +57,7 @@ func authMiddleware() gin.HandlerFunc {
 
 			c.Next()
 		} else {
-			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Invalid token claims"})
+			c.AbortWithStatusJSON(http.StatusUnauthorized, ErrorResponce{Error: "Invalid token claims"})
 			return
 		}
 	}
@@ -67,20 +66,20 @@ func authMiddleware() gin.HandlerFunc {
 func getFile(c *gin.Context) *File {
 	file, _, err := c.Request.FormFile("file")
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "File not provided"})
+		c.JSON(http.StatusBadRequest, ErrorResponce{Error: "File not provided"})
 		return nil
 	}
 	defer file.Close()
 
 	fileBytes, err := io.ReadAll(file)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to read file: " + err.Error()})
+		c.JSON(http.StatusInternalServerError, ErrorResponce{Error: "Failed to read file: " + err.Error()})
 		return nil
 	}
 
 	filename := c.Param("filename")
 	if filename == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Filename not provided"})
+		c.JSON(http.StatusBadRequest, ErrorResponce{Error: "Filename not provided"})
 		return nil
 	}
 
@@ -90,25 +89,35 @@ func getFile(c *gin.Context) *File {
 func getUserId(c *gin.Context) *uuid.UUID {
 	userIdField, exists := c.Get("user_id")
 	if !exists {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "user_id not found in jwt claims"})
+		c.JSON(http.StatusBadRequest, ErrorResponce{Error: "user_id not found in jwt claims"})
 		return nil
 	}
 
 	userIdStr, ok := userIdField.(string)
 	if !ok {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "invalid type for user_id"})
+		c.JSON(http.StatusInternalServerError, ErrorResponce{Error: "invalid type for user_id"})
 		return nil
 	}
 
 	userId, err := uuid.Parse(userIdStr)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "user_id parse error: " + err.Error()})
+		c.JSON(http.StatusInternalServerError, ErrorResponce{Error: "user_id parse error: " + err.Error()})
 		return nil
 	}
 
 	return &userId
 }
 
+// @Summary Upload file
+// @Tags files
+// @Description Upload new file to server
+// @Security AuthApiKey
+// @Param filename path string true "Filename to save"
+// @Param file formData file true "File to upload"
+// @Produce json
+// @Success 200 {object} UploadResponce "Upload responce"
+// @Failure 500 {object} ErrorResponce "Error responce"
+// @Router /api/file/:filename [post]
 func uploadFileHandler(c *gin.Context, repo repodb.FileRepository) {
 	file := getFile(c)
 	if file == nil {
@@ -121,16 +130,27 @@ func uploadFileHandler(c *gin.Context, repo repodb.FileRepository) {
 	}
 
 	if err := repo.Create(file.name, *userId, file.bytes); err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create file: " + err.Error()})
+		c.JSON(http.StatusInternalServerError, ErrorResponce{Error: "Failed to create file: " + err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"message":  "File uploaded successfully",
-		"filename": file.name,
+	c.JSON(http.StatusOK, UploadResponce{
+		Message:  "File uploaded successfully",
+		Filename: file.name,
 	})
 }
 
+// @Summary Edit file
+// @Tags files
+// @Description Send edited file to server
+// @Security AuthApiKey
+// @Param filename path string true "Filename to save"
+// @Param file formData file true "File to save"
+// @Produce json
+// @Success 200 {object} EditResponce "Edit responce"
+// @Failure 404 {object} ErrorResponce "Error responce"
+// @Failure 500 {object} ErrorResponce "Error responce"
+// @Router /api/file/:filename [put]
 func editFileHandler(c *gin.Context, repo repodb.FileRepository) {
 	file := getFile(c)
 	if file == nil {
@@ -144,20 +164,30 @@ func editFileHandler(c *gin.Context, repo repodb.FileRepository) {
 
 	if err := repo.Save(file.name, *userId, file.bytes); err != nil {
 		if errors.Is(err, repodb.ErrFileNotFound) {
-			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			c.JSON(http.StatusNotFound, ErrorResponce{Error: err.Error()})
 			return
 		}
 
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to save file: " + err.Error()})
+		c.JSON(http.StatusInternalServerError, ErrorResponce{Error: "Failed to save file: " + err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"message":  "File saved successfully",
-		"filename": file.name,
+	c.JSON(http.StatusOK, EditResponce{
+		Message:  "File saved successfully",
+		Filename: file.name,
 	})
 }
 
+// @Summary Download file
+// @Tags files
+// @Description Download a file by filename
+// @Security ApiKeyAuth
+// @Param filename path string true "Filename to download"
+// @Produce octet-stream
+// @Success 200 {file} file "File content"
+// @Failure 404 {object} ErrorResponce "Error responce"
+// @Failure 500 {object} ErrorResponce "Error responce"
+// @Router /api/file/{filename} [get]
 func downloadFileHandler(c *gin.Context, repo repodb.FileRepository) {
 	filename := c.Param("filename")
 
@@ -169,11 +199,11 @@ func downloadFileHandler(c *gin.Context, repo repodb.FileRepository) {
 	bytes, err := repo.Get(filename, *userId)
 	if err != nil {
 		if errors.Is(err, repodb.ErrFileNotFound) {
-			c.JSON(http.StatusNotFound, gin.H{"error": "File not found"})
+			c.JSON(http.StatusNotFound, ErrorResponce{Error: "File not found"})
 			return
 		}
 
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, ErrorResponce{Error: err.Error()})
 		return
 	}
 
@@ -181,6 +211,15 @@ func downloadFileHandler(c *gin.Context, repo repodb.FileRepository) {
 	c.Data(http.StatusOK, "application/octet-stream", bytes)
 }
 
+// @Summary Delete file
+// @Tags files
+// @Description Delete file from server
+// @Security AuthApiKey
+// @Produce json
+// @Param filename path string true "Filename to delete"
+// @Success 200 {object} DeleteResponce "Delete responce"
+// @Failure 400 {object} ErrorResponce "Error responce"
+// @Router /api/file/:filename [delete]
 func deleteFileHandler(c *gin.Context, repo repodb.FileRepository) {
 	filename := c.Param("filename")
 
@@ -190,16 +229,24 @@ func deleteFileHandler(c *gin.Context, repo repodb.FileRepository) {
 	}
 
 	if err := repo.Delete(filename, *userId); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Failed to delete file: " + err.Error()})
+		c.JSON(http.StatusBadRequest, ErrorResponce{Error: "Failed to delete file: " + err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"message":  "File deleted successfuly!",
-		"filename": filename,
+	c.JSON(http.StatusOK, DeleteResponce{
+		Message:  "File deleted successfuly!",
+		Filename: filename,
 	})
 }
 
+// @Summary User files
+// @Tags files
+// @Description Get all user files from server
+// @Security AuthApiKey
+// @Produce json
+// @Success 200 {object} ErrorResponce "Error responce"
+// @Failure 500 {object} ErrorResponce "Error responce"
+// @Router /api/file/:filename [get]
 func getAllFilesHandler(c *gin.Context, repo repodb.FileRepository) {
 	userId := getUserId(c)
 	if userId == nil {
@@ -208,11 +255,11 @@ func getAllFilesHandler(c *gin.Context, repo repodb.FileRepository) {
 
 	fileNames, err := repo.GetList(*userId)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to load file list: " + err.Error()})
+		c.JSON(http.StatusInternalServerError, ErrorResponce{Error: "Failed to load file list: " + err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"files": fileNames,
+	c.JSON(http.StatusOK, GetAllFilesResponce{
+		Files: fileNames,
 	})
 }
